# fugu-shell

./: Cargo.toml  memo.org
src/: builtin.rs  common.rs  editor.rs  exec.rs  fugu_env.rs  fugu_screen.rs  main.rs  parser.rs  prompt_setting.rs  read_line.rs  selector.rs  settings.rs
src/builtin/: mod.rs
